src/test/deca/context/invalid/created/object/equals_null_boolean.deca
// Description :
//    test equals entre un null et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
null a;
boolean b;
int c = a.equal(b);
}
